--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding = true
         dataBinding = true
     }
 }
@@ -43,6 +42,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.6.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
