--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.sopt.sopthub">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SOPTHub">
+        android:theme="@style/Theme.SOPTHub"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.view.SignInActivity"
             android:exported="true">
@@ -18,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.view.SignUpActivity"/>
-        <activity android:name=".ui.view.HomeActivity"/>
-        <activity android:name=".ui.view.DetailActivity"/>
+        <activity android:name=".ui.view.SignUpActivity" />
+        <activity android:name=".ui.view.MainActivity" />
+        <activity android:name=".ui.view.DetailActivity" />
     </application>
 
 </manifest>
