--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,15 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // Retrofit2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Gson converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Gson
+    implementation 'com.google.code.gson:gson.2.8.6'
     //Lottie
     implementation 'com.airbnb.android:lottie:3.6.0'
-
+    
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
