--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     // Gson converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Gson
-    implementation 'com.google.code.gson:gson.2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
     //Lottie
     implementation 'com.airbnb.android:lottie:3.6.0'
     
