--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
-    //Lottie
+    // Lottie
     implementation 'com.airbnb.android:lottie:3.6.0'
-    
+    // Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
