--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="org.sopt.sopthub">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".SOPTHubApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,7 +15,10 @@
         android:theme="@style/Theme.SOPTHub"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ui.view.user.SignInActivity"
+            android:name=".ui.view.setting.SettingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.view.onboard.OnBoardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.view.user.SignInActivity"
+            android:exported="true"/>
         <activity android:name=".ui.view.user.SignUpActivity" />
         <activity android:name=".ui.view.MainActivity" />
         <activity android:name=".ui.view.profile.DetailActivity" />
